crates/alder-parse/src/item/snapshots/alder_parse__item__attribute__tests__attr_args.snap
---
source: crates/alder-parse/src/item/attribute.rs
description: "#[extern(\"node:crypto\", \"randomUUID\")]\ntype Uuid\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 2,
            column: 10,
        },
    },
    value: Item {
        attributes: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 39,
                    },
                },
                value: Attribute {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 3,
                            },
                            end: Position {
                                line: 1,
                                column: 9,
                            },
                        },
                        value: "extern",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 10,
                                },
                                end: Position {
                                    line: 1,
                                    column: 23,
                                },
                            },
                            value: Str(
                                "node:crypto",
                            ),
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 25,
                                },
                                end: Position {
                                    line: 1,
                                    column: 37,
                                },
                            },
                            value: Str(
                                "randomUUID",
                            ),
                        },
                    ],
                },
            },
        ],
        visibility: Private,
        kind: OpaqueType(
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 6,
                    },
                    end: Position {
                        line: 2,
                        column: 10,
                    },
                },
                value: "Uuid",
            },
        ),
    },
}
