crates/alder-parse/src/item/snapshots/alder_parse__item__attribute__tests__attr_trailing_comma.snap
---
source: crates/alder-parse/src/item/attribute.rs
description: "#[derive(Show, Eq,)]\ntype Unit\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 2,
            column: 10,
        },
    },
    value: Item {
        attributes: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 21,
                    },
                },
                value: Attribute {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 3,
                            },
                            end: Position {
                                line: 1,
                                column: 9,
                            },
                        },
                        value: "derive",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 10,
                                },
                                end: Position {
                                    line: 1,
                                    column: 14,
                                },
                            },
                            value: Path(
                                Path {
                                    segments: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 10,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 14,
                                                },
                                            },
                                            value: "Show",
                                        },
                                    ],
                                },
                            ),
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 16,
                                },
                                end: Position {
                                    line: 1,
                                    column: 18,
                                },
                            },
                            value: Path(
                                Path {
                                    segments: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 16,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 18,
                                                },
                                            },
                                            value: "Eq",
                                        },
                                    ],
                                },
                            ),
                        },
                    ],
                },
            },
        ],
        visibility: Private,
        kind: OpaqueType(
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 6,
                    },
                    end: Position {
                        line: 2,
                        column: 10,
                    },
                },
                value: "Unit",
            },
        ),
    },
}
