crates/alder-parse/src/item/snapshots/alder_parse__item__attribute__tests__error_attr_arg.snap
---
source: crates/alder-parse/src/item/attribute.rs
description: "#[derive(Show, ])] type X"
---
Attribute(
    Arg(
        Start(
            1,
            16,
        ),
        1,
        16,
    ),
    1,
    1,
)
