crates/alder-parse/src/item/snapshots/alder_parse__item__attribute__tests__error_attr_arg_end.snap
---
source: crates/alder-parse/src/item/attribute.rs
description: "#[derive(Show Eq)] type X"
---
Attribute(
    ArgEnd(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 9,
            },
            boundary: Position {
                line: 1,
                column: 14,
            },
            unexpected: Position {
                line: 1,
                column: 15,
            },
        },
    ),
    1,
    1,
)
