crates/alder-parse/src/item/snapshots/alder_parse__item__attribute__tests__error_attr_dangling.snap
---
source: crates/alder-parse/src/item/attribute.rs
description: "#[extern]"
---
Attribute(
    Dangling(
        1,
        10,
    ),
    1,
    1,
)
