crates/alder-parse/src/item/snapshots/alder_parse__item__attribute__tests__error_attr_name_reserved.snap
---
source: crates/alder-parse/src/item/attribute.rs
description: "#[test] fn f() {}"
---
Attribute(
    Name(
        1,
        3,
    ),
    1,
    1,
)
